--- a/JoTaskMaster.Tests/JoTaskMaster.Tests.csproj
+++ b/JoTaskMaster.Tests/JoTaskMaster.Tests.csproj
@@ -33,8 +33,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ProjectTask\Commands\" />
-    <Folder Include="ProjectTask\Queries\" />
+    <Folder Include="ProjectTasks\Queries\" />
+    <Folder Include="Services\ProjectTaskService\" />
   </ItemGroup>
 
 </Project>
