--- a/JoTaskMaster.Application.Validation/JoTaskMaster.Application.Validation.csproj
+++ b/JoTaskMaster.Application.Validation/JoTaskMaster.Application.Validation.csproj
@@ -17,7 +17,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Companies\Commands\" />
+    <Folder Include="Companies\Queries\" />
     <Folder Include="Projects\Queries\" />
+    <Folder Include="ProjectTasks\Queries\" />
+    <Folder Include="Users\Commands\" />
+    <Folder Include="Users\Queries\" />
   </ItemGroup>
 
 </Project>
