--- a/JoTaskMaster/appsettings.json
+++ b/JoTaskMaster/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db; Database=JoTaskMasterDBB; User Id=sa; Password=SergeiPassword123; MultipleActiveResultSets=True; TrustServerCertificate=True" 
-},
+    "DefaultConnection": "Server=DESKTOP-55KITNB; Database=JoTaskMasterDBB; TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
